<resources>
    <string name="app_name">FoodPlanner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search Fragment\n</string>
    <string name="favourite">Favourite</string>
    <string name="calender">Calender Fragment</string>
    <string name="name_of_meal">Meal Name</string>
    <string name="content_description_pancakes">Pancakes Background</string>
    <string name="country">Country</string>
    <string name="instructions">Instructions</string>
    <string name="img_bg">Image background</string>
    <string name="ingredient_img">https://www.themealdb.com/images/ingredients/%s-Small.png</string>
    <string name="myfavmeal">My Favourite Meals\n</string>
    <string name="delete_meal">Delet Meal</string>
    <string name="checkConnection">Please Check your connection,
         And You can still access your planned meals and favorite meals.\n</string>
    <string name="connection_lost_image">Connection is lost\n</string>

</resources>