<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardFavMeal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/babyPink"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <!-- Meal Image -->
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgFavMeal"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginBottom="12dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/content_description_pancakes"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:shapeAppearanceOverlay="@style/RoundCorner"
                tools:src="@drawable/test_img" />

            <!-- Transparent Delete Button on Top of Image -->
            <ImageButton
                android:id="@+id/btnDelete"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:alpha="0.7"
                app:srcCompat="@drawable/baseline_delete_24"
                android:contentDescription="@string/delete_meal"
                android:layout_margin="8dp"
                app:tint="@color/pink"
                app:layout_constraintTop_toTopOf="@id/imgFavMeal"
                app:layout_constraintEnd_toEndOf="@id/imgFavMeal" />

            <!-- Meal Name -->
            <TextView
                android:id="@+id/txtFavMealName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/meriendavariablefontwght"
                android:maxLines="2"
                android:text="@string/name_of_meal"
                android:textAlignment="center"
                android:textColor="@color/titleColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/imgFavMeal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Meal Country -->
            <TextView
                android:id="@+id/txtFavMealCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/meriendavariablefontwght"
                android:text="@string/country"
                android:textColor="@color/bodyTextColor"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/txtFavMealName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

    <!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content">-->

<!--    <androidx.cardview.widget.CardView-->
<!--        android:id="@+id/cardFavMeal"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="4dp"-->
<!--        android:backgroundTint="@color/babyPink"-->
<!--        app:cardCornerRadius="12dp"-->
<!--        app:cardElevation="8dp"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent">-->

<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:padding="8dp">-->

<!--            &lt;!&ndash; Meal Image &ndash;&gt;-->
<!--            <com.google.android.material.imageview.ShapeableImageView-->
<!--                android:id="@+id/imgFavMeal"-->
<!--                android:layout_width="180dp"-->
<!--                android:layout_height="180dp"-->
<!--                android:layout_marginBottom="12dp"-->
<!--                android:adjustViewBounds="true"-->
<!--                android:contentDescription="@string/content_description_pancakes"-->
<!--                android:scaleType="centerCrop"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintEnd_toStartOf="@+id/btnDelete"-->
<!--                app:shapeAppearanceOverlay="@style/RoundCorner"-->
<!--                tools:src="@drawable/test_img" />-->

<!--            &lt;!&ndash; Meal Name &ndash;&gt;-->
<!--            <TextView-->
<!--                android:id="@+id/txtFavMealName"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:fontFamily="@font/meriendavariablefontwght"-->
<!--                android:maxLines="2"-->
<!--                android:text="@string/name_of_meal"-->
<!--                android:textAlignment="center"-->
<!--                android:textColor="@color/titleColor"-->
<!--                android:textSize="16sp"-->
<!--                android:textStyle="bold"-->
<!--                app:layout_constraintTop_toBottomOf="@id/imgFavMeal"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent" />-->

<!--            &lt;!&ndash; Meal Country &ndash;&gt;-->
<!--            <TextView-->
<!--                android:id="@+id/txtFavMealCountry"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="4dp"-->
<!--                android:fontFamily="@font/meriendavariablefontwght"-->
<!--                android:text="@string/country"-->
<!--                android:textColor="@color/bodyTextColor"-->
<!--                android:textSize="14sp"-->
<!--                app:layout_constraintTop_toBottomOf="@id/txtFavMealName"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent" />-->

<!--            &lt;!&ndash; Delete Button &ndash;&gt;-->
<!--            <ImageButton-->
<!--                android:id="@+id/btnDelete"-->
<!--                android:layout_width="50dp"-->
<!--                android:layout_height="50dp"-->
<!--                android:background="@drawable/circle_background"-->
<!--                app:srcCompat="@drawable/baseline_delete_outline_24"-->
<!--                android:contentDescription="@string/delete_meal"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:layout_marginEnd="8dp"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent" />-->

<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
<!--    </androidx.cardview.widget.CardView>-->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->




